--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1 id="homeTitle" class="h1">Take a Guess</h1>
         <p class="lead">
           You’ll see five prompts. Pick one and describe it to the group without saying the exact words.
-          When they guess, tap <strong>Guessed</strong> to score and refresh the list.
+          When they guess, tap <strong>Guessed</strong> to score and refresh.
         </p>
       </div>
 
@@ -162,6 +162,7 @@
 
   </div>
 
+  <!-- IMPORTANT: decks.js MUST load before app.js -->
   <script src="decks.js"></script>
   <script src="app.js"></script>
 </body>
